# kgms

./: .dockerignore  .gitignore  README.md
deploy/lightrag-server/: .env.example  .gitignore  Dockerfile.lightrag-server  README.md  docker-compose.kgms-server.yml  docker-compose.yml  kgms.env.example
deploy/lightrag-server/scripts/: bootstrap-kgms.sh
docs/domain/: military-entity-types.md
docs/superpowers/plans/: 2026-05-26-kgms-frontend-mvp.md
docs/superpowers/specs/: 2026-05-24-kgms-lightrag-pageindex-design.md  2026-05-26-kgms-config-management-design.md  2026-05-26-kgms-frontend-design.md  (+1 more)
kgms-backend/: .env.example  Dockerfile  pyproject.toml
kgms-backend/app/: __init__.py  config.py  database.py  dependencies.py  domain.py  main.py  models.py  schemas.py
kgms-backend/app/routers/: __init__.py  configuration.py  documents.py  knowledge_graph.py  retrieval.py
kgms-backend/app/services/: __init__.py  config_manager.py  document_service.py  file_storage.py  lightrag_client.py  pageindex_client.py  pageindex_service.py  retrieval_orchestrator.py
kgms-backend/scripts/: kgms_upload_document.py
kgms-backend/tests/: conftest.py  test_configuration_api.py  test_database.py  test_dependencies.py  test_document_api.py  test_knowledge_graph_api.py  test_lightrag_client.py  test_main.py  test_models.py  test_pageindex_client.py  test_pageindex_service.py  test_retrieval_api.py
kgms-frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
kgms-frontend/src/: App.tsx  index.css
(+48 files in other folders)
